# korman

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.ps1  release.ps1
.github/workflows/: ci_build.yml
cmake/: Dependencies.cmake  FindBlender.cmake  FindVCRedist.cmake  Finddumpbin.cmake  Packaging.cmake
installer/: Installer.nsi  README.md  RegGuid.nsh  WIX_UI_BANNER.xcf  WIX_UI_DIALOG.xcf  WelcomeFinish.pdn  WiX.template.in  license.txt.in
korlib/: CMakeLists.txt  PyHSPlasma_private.h  buffer.cpp  buffer.h  bumpmap.cpp  bumpmap.h  generate_mipmap.cpp  korlib.h  module.cpp  pyMipmap.h  sound.cpp  sound.h  texture.cpp  texture.h  utils.hpp
korman/: __init__.py  addon_prefs.py  enum_props.py  exporter.py  helpers.py  idprops.py  ordered_set.py  plasma_api.py  plasma_attributes.py  plasma_launcher.py  plasma_magic.py  render.py
korman/exporter/: __init__.py  animation.py  armature.py  camera.py  convert.py  decal.py  etlight.py  explosions.py  gui.py  image.py  locman.py  logger.py  manager.py  material.py  mesh.py  outfile.py  physics.py  python.py  rtlight.py  sumfile.py  utils.py
korman/korlib/: __init__.py  console.py  python.py  texture.py
korman/nodes/: __init__.py  node_avatar.py  node_conditions.py  node_core.py  node_deprecated.py  node_logic.py  node_messages.py  node_python.py  node_responder.py  node_softvolume.py
korman/operators/: __init__.py  op_camera.py  op_export.py  op_image.py  op_lightmap.py  op_mesh.py  op_modifier.py  op_nodes.py  op_sound.py  op_texture.py  op_toolbox.py  op_ui.py  op_world.py
korman/properties/: __init__.py  prop_anim.py  prop_camera.py  prop_image.py  prop_lamp.py  prop_material.py  prop_object.py  prop_scene.py  prop_sound.py  prop_text.py  prop_texture.py  prop_world.py
korman/properties/modifiers/: __init__.py  anim.py  avatar.py  base.py  game_gui.py  gui.py  logic.py  physics.py  region.py  render.py  sound.py  water.py
korman/ui/: __init__.py  ui_anim.py  ui_camera.py  ui_image.py  ui_lamp.py  ui_list.py  ui_material.py  ui_menus.py  ui_modifiers.py  ui_object.py  ui_render_layer.py  ui_scene.py  ui_text.py  ui_texture.py  ui_toolbox.py  ui_world.py
korman/ui/modifiers/: __init__.py  anim.py  avatar.py  game_gui.py  gui.py  logic.py  physics.py  region.py  render.py  sound.py  water.py
